src/test/deca/syntax/invalid/created/ClassWithoutMain.deca
// Description:
//    tests de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur, pas de main

class Alone{
}